--- a/src/index.scss
+++ b/src/index.scss
@@ -66,6 +66,7 @@ header {
   background: #ffffff;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
+  overflow: auto;
 
   .items {
     flex: 1;
