--- a/src/index.scss
+++ b/src/index.scss
@@ -32,11 +32,39 @@ header {
   }
 }
 
+.cartEmpty {
+  text-align: center;
+
+  p {
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+
+    &:hover {
+      img {
+        transform: rotate(180deg);
+      }
+    }
+
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform .15s ease-in-out;
+    }
+  }
+}
 
 .search-block {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
 
   input {
     border: 0;
@@ -44,6 +72,15 @@ header {
     font-size: 16px;
     width: 200px;
   }
+
+  .clear {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    top: 13px;
+    right: 15px;
+  }
+
 }
 
 .overlay {
